marvelus_examples/tests/neg/consts02.zls
(* ==== NEG 5: Later part mismatch after strip (X of wrong equality) ==== *)
let later_eq_bad : {v:int | v = 5 && x(v = 6)} = 5   (* should FAIL *)



let hybrid main () = ()